Closed
Bug 1746095
Opened 4 years ago
Closed 4 years ago
Crash in [@ mozilla::dom::HTMLCanvasElementObserver::Observe]
Categories
(Core :: Graphics: Canvas2D, defect)
Core
Graphics: Canvas2D
Tracking
()
RESOLVED
FIXED
97 Branch
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox95 | --- | unaffected |
firefox96 | --- | unaffected |
firefox97 | --- | fixed |
People
(Reporter: aosmond, Assigned: aosmond)
References
(Blocks 1 open bug)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
I didn't implement handling memory pressure events.
Crash report: https://crash-stats.mozilla.org/report/index/8fe8948a-7d95-40e8-9aab-535d70211215
MOZ_CRASH Reason: MOZ_CRASH(todo)
Top 10 frames of crashing thread:
0 libxul.so mozilla::dom::HTMLCanvasElementObserver::Observe dom/html/HTMLCanvasElement.cpp:324
1 libxul.so nsObserverList::NotifyObservers xpcom/ds/nsObserverList.cpp:70
2 libxul.so nsObserverService::NotifyObservers xpcom/ds/nsObserverService.cpp:292
3 libxul.so mozilla::dom::ContentChild::RecvFlushMemory dom/ipc/ContentChild.cpp:2588
4 libxul.so mozilla::dom::PContentChild::OnMessageReceived ipc/ipdl/PContentChild.cpp:10458
5 libxul.so mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:1968
6 libxul.so mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:771
7 libxul.so NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:467
8 libxul.so mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:85
9 libxul.so MessageLoop::Run ipc/chromium/src/base/message_loop.cc:306
Assignee | ||
Comment 1•4 years ago
|
||
We will implement this properly in bug 1746260, but for now, let's spare
users with OffscreenCanvas turned on, who have low memory, a content
process crash. Handling it is somewhat complicated because we need to
shuttle over the message to the worker.
Updated•4 years ago
|
Assignee: nobody → aosmond
Status: NEW → ASSIGNED
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2cb4a2403bd0
Avoid crashing when we get memory pressure events with OffscreenCanvas. r=jgilbert
Comment 3•4 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox97:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch
Updated•4 years ago
|
status-firefox95:
--- → unaffected
status-firefox96:
--- → unaffected
status-firefox-esr91:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•